tests/language_modules/15_qualified_names_calls/invalid_semantics/qualified_call_argument_type.vf
module Qualified.ArgumentType

function increment(amount: Integer) returns Integer
is
    return amount + 1
end increment

procedure main()
is
    let total: Integer = Qualified.ArgumentType.increment(true)
    check total = 2
end main

end Qualified.ArgumentType